--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -174,7 +174,7 @@
    "id": "43047d5a-72f1-494e-9e93-a27bf76d40a8",
    "metadata": {},
    "source": [
-    "### There is no requirements Economics"
+    "### There is no requirements Economics DataFrame"
    ]
   },
   {
